[package]
name = "shroom_wz_exporter"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
convert_case = "0.6.0"
jtd-infer = "0.2.1"
quote = "1.0.33"
serde-intermediate = "1.6.0"
serde_json = "1.0.105"
shroom-wz = { version = "0.1.0", path = "../shroom-wz", features = ["mmap"] }
toml = "0.7.6"
