[package]
name = "shroom-wz-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.21"
console_error_panic_hook = "0.1"
crc32fast = "1"
dioxus = "0.4"
dioxus-hooks = "0.4"
dioxus-web = "0.4"
id_tree = "1"
image = "0.24"
js-sys = "0.3"
log = "0.4"
lru = "0.11"
shroom-wz = { version = "0.1.0", path = "../shroom-wz" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = [
    "FileList",
    "HtmlInputElement",
    "FileReader",
    "File",
    "Blob",
    "ImageData",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d"
] }
